Few miscellaneous interface fixes
- fixed an issued with overlapping checkbox in the artifact-linker.html
- standardized the date formatting across ir-add-action.html, ir-edit.html, ir-view.html
- fixed an issue where the email address column would overflow in the next column

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -3254,6 +3254,8 @@ section {
 
 .table-td {
 	padding: 0.8rem 0.5rem;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .first-col {
